<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>826</width>
    <height>260</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>LR1</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QRadioButton" name="encryptRadioBtn">
          <property name="text">
           <string>Зашифровать</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QRadioButton" name="decryptRadioBtn">
          <property name="text">
           <string>Расшифровать</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <widget class="QComboBox" name="languageComboBox">
        <item>
         <property name="text">
          <string>Русский</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Английский</string>
         </property>
        </item>
       </widget>
      </item>
      <item>
       <widget class="QComboBox" name="methodComboBox">
        <item>
         <property name="text">
          <string>Шифр Виженера</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Гаммирование</string>
         </property>
        </item>
       </widget>
      </item>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Orientation::Horizontal</enum>
        </property>
        <property name="sizeType">
         <enum>QSizePolicy::Policy::Expanding</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QPushButton" name="loadFileBtn">
          <property name="text">
           <string>Загрузить из файла</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="saveFileBtn">
          <property name="text">
           <string>Сохранить в файл</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
         <widget class="QLabel" name="inputLabel">
          <property name="text">
           <string>Исходный текст</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPlainTextEdit" name="inputText"/>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <item>
         <widget class="QLabel" name="keyLabel">
          <property name="text">
           <string>Ключ</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPlainTextEdit" name="keyInputText"/>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
         <widget class="QLabel" name="resultLabel">
          <property name="text">
           <string>Результат</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPlainTextEdit" name="resultText"/>
        </item>
       </layout>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QPushButton" name="showResultBtn">
      <property name="text">
       <string>Выполнить</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
